--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,19 @@
 {
-    "name": "Weathlify",
+    "name": "Weatherly",
     "version": "1.0.0",
     "description": "Look for the Weather in your location",
+    "permissions": [
+        "geolocation"
+    ],
     "manifest_version": 3,
     "author": "Sakhekile Dudula",
-    "action":{
+    "icons": {
+        "16": "images/favicon_16x16.png",
+        "32": "images/favicon_32x32.png",
+        "48": "images/favicon_48x48.png",
+        "128": "images/favicon_128x128.png"
+    },
+    "action": {
         "default_popup": "index.html",
         "default_title": "The Weather App"
     }
